infrastructure layer setup

--- a/coupons.Infrastructure/coupons.Infrastructure.csproj
+++ b/coupons.Infrastructure/coupons.Infrastructure.csproj
@@ -4,6 +4,10 @@
     <ProjectReference Include="..\coupons.Core\coupons.Core.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.3" />
+  </ItemGroup>
+
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
